--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -47,8 +47,11 @@ body:
       options:
         - Ubuntu 20.04
         - Ubuntu 22.04
+        - Ubuntu 24.04
         - macOS 12 (Monterey)
         - macOS 13 (Ventura)
+        - macOS 14 (Sonoma)
+        - macOS 15 (Sequoia)
         - Windows 10
         - Windows 11
         - Other
