--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,5 @@
 name: 🐞 Bug Report
-description: |
-  Use this template to report bugs or issues in the application. Ensure that you provide detailed and accurate information to help us investigate the issue. Be as specific as possible and include all necessary steps and context.
+description: Report a bug or issue in the application. Provide detailed steps to reproduce.
 title: '[BUG] <Descriptive bug title>'
 labels: ['Bug', 'Needs Triage', 'Help Wanted']
 assignees:
@@ -79,7 +78,7 @@ body:
         - 1.20
         - 1.21
         - 1.22
-        - 1.23.1
+        - 1.23
         - Other
 
   - type: textarea
